// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`default topic behavior 1`] = `
{
  "output": {
    "WING_TEST_RUNNER_FUNCTION_IDENTIFIERS": {
      "value": "[]",
    },
  },
  "resource": {
    "aws_sns_topic": {
      "Topic": {
        "name": "Topic-c8228fb7",
      },
    },
  },
}
`;

exports[`default topic behavior 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Topic": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Default",
                    "path": "root/Default/Topic/Default",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A pub/sub notification topic",
                  "title": "Topic",
                },
                "id": "Topic",
                "path": "root/Default/Topic",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.17.0",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.2.70",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`replace invalid character from queue name 1`] = `
{
  "output": {
    "WING_TEST_RUNNER_FUNCTION_IDENTIFIERS": {
      "value": "[]",
    },
  },
  "resource": {
    "aws_sns_topic": {
      "TheSpectacularTopic": {
        "name": "The-Spectacular-Topic-c8252318",
      },
    },
  },
}
`;

exports[`replace invalid character from queue name 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "The%Spectacular@Topic": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Default",
                    "path": "root/Default/The%Spectacular@Topic/Default",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A pub/sub notification topic",
                  "title": "Topic",
                },
                "id": "The%Spectacular@Topic",
                "path": "root/Default/The%Spectacular@Topic",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.17.0",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.2.70",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`topic name valid 1`] = `
{
  "output": {
    "WING_TEST_RUNNER_FUNCTION_IDENTIFIERS": {
      "value": "[]",
    },
  },
  "resource": {
    "aws_sns_topic": {
      "The-Spectacular_Topic-01": {
        "name": "The-Spectacular_Topic-01-c828760a",
      },
    },
  },
}
`;

exports[`topic name valid 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "The-Spectacular_Topic-01": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Default",
                    "path": "root/Default/The-Spectacular_Topic-01/Default",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A pub/sub notification topic",
                  "title": "Topic",
                },
                "id": "The-Spectacular_Topic-01",
                "path": "root/Default/The-Spectacular_Topic-01",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.17.0",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.2.70",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`topic with subscriber function 1`] = `
"new ((function(){
  return class Handler {
    constructor(clients) {
      for (const [name, client] of Object.entries(clients)) {
        this[name] = client;
      }
    }
    async handle(event) { console.log(\\"Received: \\", event); }
  };
})())({
  
})"
`;

exports[`topic with subscriber function 2`] = `
{
  "output": {
    "WING_TEST_RUNNER_FUNCTION_IDENTIFIERS": {
      "value": "[]",
    },
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "Topic-OnMessage-700750_CloudwatchLogGroup_B0417D3F": {
        "name": "/aws/lambda/Topic-OnMessage-700750-c8d0a789",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "Topic-OnMessage-700750_IamRole_C67BD83B": {
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
    },
    "aws_iam_role_policy": {
      "Topic-OnMessage-700750_IamRolePolicy_665BE402": {
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Action\\":\\"none:null\\",\\"Resource\\":\\"*\\"}]}",
        "role": "\${aws_iam_role.Topic-OnMessage-700750_IamRole_C67BD83B.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "Topic-OnMessage-700750_IamRolePolicyAttachment_182FC7B9": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.Topic-OnMessage-700750_IamRole_C67BD83B.name}",
      },
    },
    "aws_lambda_function": {
      "Topic-OnMessage-700750": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "Topic-OnMessage-700750-c8d0a789",
          },
        },
        "function_name": "Topic-OnMessage-700750-c8d0a789",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.Topic-OnMessage-700750_IamRole_C67BD83B.arn}",
        "runtime": "nodejs18.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.Topic-OnMessage-700750_S3Object_71B2BA16.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_lambda_permission": {
      "Topic-OnMessage-700750_InvokePermission-c8228fb70d825c2a5610c610e5246d5313ea6bd1a2_2B761E61": {
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.Topic-OnMessage-700750.function_name}",
        "principal": "sns.amazonaws.com",
        "qualifier": "\${aws_lambda_function.Topic-OnMessage-700750.version}",
        "source_arn": "\${aws_sns_topic.Topic.arn}",
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
    },
    "aws_s3_object": {
      "Topic-OnMessage-700750_S3Object_71B2BA16": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
    "aws_sns_topic": {
      "Topic": {
        "name": "Topic-c8228fb7",
      },
    },
    "aws_sns_topic_subscription": {
      "Topic_Topic-TopicSubscription-700750_4170E96D": {
        "endpoint": "\${aws_lambda_function.Topic-OnMessage-700750.arn}",
        "protocol": "lambda",
        "topic_arn": "\${aws_sns_topic.Topic.arn}",
      },
    },
  },
}
`;

exports[`topic with subscriber function 3`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.17.0",
                },
                "id": "Code",
                "path": "root/Default/Code",
              },
              "Topic": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Default",
                    "path": "root/Default/Topic/Default",
                  },
                  "Topic-TopicSubscription-700750": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Topic-TopicSubscription-700750",
                    "path": "root/Default/Topic/Topic-TopicSubscription-700750",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A pub/sub notification topic",
                  "title": "Topic",
                },
                "id": "Topic",
                "path": "root/Default/Topic",
              },
              "Topic-OnMessage-700750": {
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.17.0",
                    },
                    "id": "Asset",
                    "path": "root/Default/Topic-OnMessage-700750/Asset",
                  },
                  "CloudwatchLogGroup": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "CloudwatchLogGroup",
                    "path": "root/Default/Topic-OnMessage-700750/CloudwatchLogGroup",
                  },
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Default",
                    "path": "root/Default/Topic-OnMessage-700750/Default",
                  },
                  "IamRole": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "IamRole",
                    "path": "root/Default/Topic-OnMessage-700750/IamRole",
                  },
                  "IamRolePolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "IamRolePolicy",
                    "path": "root/Default/Topic-OnMessage-700750/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "IamRolePolicyAttachment",
                    "path": "root/Default/Topic-OnMessage-700750/IamRolePolicyAttachment",
                  },
                  "InvokePermission-c8228fb70d825c2a5610c610e5246d5313ea6bd1a2": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "InvokePermission-c8228fb70d825c2a5610c610e5246d5313ea6bd1a2",
                    "path": "root/Default/Topic-OnMessage-700750/InvokePermission-c8228fb70d825c2a5610c610e5246d5313ea6bd1a2",
                  },
                  "S3Object": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "S3Object",
                    "path": "root/Default/Topic-OnMessage-700750/S3Object",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Topic-OnMessage-700750",
                "path": "root/Default/Topic-OnMessage-700750",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.17.0",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.2.70",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
